WRP-2752 Reverted relative positioning fix due to popover needing to be constrained to width of edit/model panel. Relatively positioned fixes the popover scrolling bug but compromises the visibility of popover content which can't extend over the absolutely positioned LH tab panel without being clipped. UX is in favour of current absolutely positioned popovers until a full-width content scrolling fix is available.

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -64,7 +64,6 @@
      font-size: 20px;
      box-shadow: none !important;
      margin-right: 0px!important;
-     z-index: inherit;
  }
  .task-details .btn {
      padding: 0px;
